force-app/main/default/objects/Record_Insights_Model_Alias__mdt/Record_Insights_Model_Alias__mdt.object-meta.xml
<CustomObject>
    <description>Configures Models API aliases that Agentforce Record Insights can expose in the end-user model picker.</description>
    <label>Record Insights Model Alias</label>
    <pluralLabel>Record Insights Model Aliases</pluralLabel>
</CustomObject>