force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <description>Flex credit usage tier. Supported values are basic, standard, and advanced.</description>
    <label>Credit Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>