force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>The model name shown to end users in the Record Insights model picker.</description>
    <label>Display Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>