force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this model appears in the end-user model picker.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>