force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the preferred default model for this model set.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>