force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Model_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_API_Name__c</fullName>
    <description>The Salesforce Models API alias to send to the Models API.</description>
    <label>Model API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>