force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Model_Set__c.field-meta.xml
<CustomField>
    <fullName>Model_Set__c</fullName>
    <description>Groups model aliases so admins can select a page-specific model set in Lightning App Builder.</description>
    <label>Model Set</label>
    <length>80</length>
    <type>Text</type>
</CustomField>