force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional notes for admins about model availability, trust boundary, or routing behavior.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>