force-app/main/default/objects/Record_Insights_Model_Alias__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>The model provider shown to end users in the Record Insights model picker.</description>
    <label>Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>